Added a visual progression during filesystem indexing

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,12 +1,8 @@
-application.args=-r "file:///C:/Dev/java/projects/SvnHelper/testRepo/New folder/B11" -i -d test\\testData.db
+application.args=-r "file:///C:/Dev/java/projects/SvnHelper/testRepo/New folder/B11" -i -d testdata\\testData.db
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.commons-cli-1.2.jar=C:\\Dev\\java\\projects\\DuplicateHunter\\lib\\commons-cli-1.2.jar
-file.reference.fast-md5-2.7.1.jar=C:\\Dev\\java\\projects\\DuplicateHunter\\lib\\fast-md5-2.7.1.jar
-file.reference.sqlite-jdbc-3.7.2.jar=C:\\Dev\\java\\projects\\DuplicateHunter\\lib\\sqlite-jdbc-3.7.2.jar
-file.reference.svnkit-1.8.6.jar=C:\\Dev\\java\\projects\\DuplicateHunter\\lib\\svnkit-1.8.6.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\seki\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
-work.dir=C:\\Dev\\java\\projects\\SvnHelper
+work.dir=C:\\Dev\\java\\projects\\DuplicateHunter
