--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
+file.reference.commons-configuration-1.10.jar=lib\\commons-configuration-1.10.jar
 file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
 file.reference.fast-md5-2.7.1.jar=lib/fast-md5-2.7.1.jar
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
@@ -39,7 +40,8 @@ javac.classpath=\
     ${file.reference.commons-cli-1.2.jar}:\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
     ${file.reference.fast-md5-2.7.1.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-configuration-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -81,8 +82,10 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 source.reference.commons-cli-1.2.jar=lib/commons-cli-1.2-sources.jar
+source.reference.commons-configuration-1.10.jar=lib/commons-configuration-1.10-sources.jar
 source.reference.commons-io-2.4.jar=lib/commons-io-2.4-sources.jar
 source.reference.fast-md5-2.7.1.jar=lib/fast-md5-2.7.1-sources.jar
+source.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2-javadoc.jar
 source.reference.svnkit-1.8.6.jar=lib/svnkit-1.8.6-sources.jar
 src.dir=src
 test.src.dir=test
