--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
 file.reference.commons-configuration-1.10.jar=lib\\commons-configuration-1.10.jar
 file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
 file.reference.fast-md5-2.7.1.jar=lib/fast-md5-2.7.1.jar
+file.reference.quicktable-3.0.jar=lib\\quicktable-3.0.jar
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 file.reference.svnkit-1.8.6.jar=lib/svnkit-1.8.6.jar
 includes=**
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
     ${file.reference.fast-md5-2.7.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.commons-configuration-1.10.jar}
+    ${file.reference.commons-configuration-1.10.jar}:\
+    ${file.reference.quicktable-3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
