--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ excludes=
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
 file.reference.commons-configuration-1.10.jar=lib\\commons-configuration-1.10.jar
 file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
+file.reference.commons-lang-2.6.jar=lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
 file.reference.fast-md5-2.7.1.jar=lib/fast-md5-2.7.1.jar
 file.reference.quicktable-3.0.jar=lib\\quicktable-3.0.jar
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
@@ -43,7 +45,9 @@ javac.classpath=\
     ${file.reference.fast-md5-2.7.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.commons-configuration-1.10.jar}:\
-    ${file.reference.quicktable-3.0.jar}
+    ${file.reference.quicktable-3.0.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,6 +67,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-logging-1.2.jar=lib/commons-logging-1.2-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -86,6 +91,7 @@ source.encoding=UTF-8
 source.reference.commons-cli-1.2.jar=lib/commons-cli-1.2-sources.jar
 source.reference.commons-configuration-1.10.jar=lib/commons-configuration-1.10-sources.jar
 source.reference.commons-io-2.4.jar=lib/commons-io-2.4-sources.jar
+source.reference.commons-lang-2.6.jar=lib/commons-lang-2.6-sources.jar
 source.reference.fast-md5-2.7.1.jar=lib/fast-md5-2.7.1-sources.jar
 source.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2-javadoc.jar
 source.reference.svnkit-1.8.6.jar=lib/svnkit-1.8.6-sources.jar
