--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/DuplicateHunter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.antlr-runtime-3.4.jar=lib\\antlr-runtime-3.4.jar
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
 file.reference.commons-configuration-1.10.jar=lib\\commons-configuration-1.10.jar
 file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
@@ -34,7 +35,9 @@ file.reference.commons-lang-2.6.jar=lib\\commons-lang-2.6.jar
 file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
 file.reference.fast-md5-2.7.1.jar=lib/fast-md5-2.7.1.jar
 file.reference.quicktable-3.0.jar=lib\\quicktable-3.0.jar
+file.reference.sequence-library-1.0.3.jar=lib\\sequence-library-1.0.3.jar
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
+file.reference.sqljet-1.1.10.jar=lib\\sqljet-1.1.10.jar
 file.reference.svnkit-1.8.6.jar=lib/svnkit-1.8.6.jar
 includes=**
 jar.compress=false
@@ -47,7 +50,10 @@ javac.classpath=\
     ${file.reference.commons-configuration-1.10.jar}:\
     ${file.reference.quicktable-3.0.jar}:\
     ${file.reference.commons-lang-2.6.jar}:\
-    ${file.reference.commons-logging-1.2.jar}
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.sqljet-1.1.10.jar}:\
+    ${file.reference.antlr-runtime-3.4.jar}:\
+    ${file.reference.sequence-library-1.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
